# -_1

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
include/: Laboratory_2.h
src/: CMakeLists.txt  Laboratory_2.cpp  circ_buf.cpp
tests/: CMakeLists.txt  tests.cpp
